--- a/index.html
+++ b/index.html
@@ -1871,7 +1871,7 @@
     <script>
       // Hardcoded admin credentials (separate from Firebase)
       const ADMIN_EMAIL = 'ushanatarajan1411@gmail.com';
-      const ADMIN_PASSWORD = 'natu1474';
+      const ADMIN_PASSWORD = 'sairam';
 
       const adminWelcomeBanner = document.getElementById('adminWelcomeBanner');
       const adminPanelBtn = document.getElementById('adminPanelBtn');
@@ -1955,4 +1955,171 @@
       });
     </script>
 
-    <!-
+    <!-- Floating Chatbot Widget -->
+    <div id="chatbotWidget" class="fixed bottom-4 right-4 z-[60]">
+      <div id="chatbotPanel" class="hidden w-80 sm:w-96 bg-white rounded-xl shadow-2xl mb-3 overflow-hidden">
+        <div class="px-3 py-2 bg-primary text-white flex justify-between items-center">
+          <span class="font-semibold">Assistant</span>
+          <button id="chatbotClose" class="text-white/90 hover:text-white"><i class="ri-close-line"></i></button>
+        </div>
+        <div id="chatbotMessages" class="h-72 overflow-y-auto p-3 space-y-2 bg-gray-50 text-sm"></div>
+        <form id="chatbotForm" class="flex gap-2 p-3 border-t">
+          <input id="chatbotInput" type="text" placeholder="Ask me anything..." class="flex-1 border rounded-lg px-3 py-2" required />
+          <button class="bg-primary text-white px-3 py-2 rounded-lg"><i class="ri-send-plane-2-line"></i></button>
+        </form>
+      </div>
+      <button id="chatbotToggle" class="bg-primary text-white w-12 h-12 rounded-full shadow-xl flex items-center justify-center hover:bg-blue-600">
+        <i class="ri-chat-1-line ri-lg"></i>
+      </button>
+    </div>
+
+    <!-- Admin Analytics Modal (only shown to admin) -->
+    <div id="analyticsModal" class="fixed inset-0 bg-black/50 z-[70] hidden">
+      <div class="max-w-4xl mx-auto bg-white rounded-2xl mt-24 shadow-2xl overflow-hidden">
+        <div class="flex items-center justify-between p-4 border-b">
+          <h3 class="text-lg font-semibold">Admin Analytics</h3>
+          <button id="analyticsClose" class="text-gray-500 hover:text-gray-700"><i class="ri-close-line ri-xl"></i></button>
+        </div>
+        <div class="p-4 grid grid-cols-1 lg:grid-cols-2 gap-6">
+          <div>
+            <h4 class="font-semibold mb-2">Orders Over Time</h4>
+            <canvas id="ordersChart" height="180"></canvas>
+          </div>
+          <div>
+            <h4 class="font-semibold mb-2">Revenue</h4>
+            <canvas id="revenueChart" height="180"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Analytics open button (admin only) -->
+    <button id="openAnalyticsBtn" class="hidden fixed bottom-4 left-4 z-[60] bg-red-600 text-white px-3 py-2 rounded-lg shadow hover:bg-red-700">
+      <i class="ri-bar-chart-2-line mr-1"></i> Analytics
+    </button>
+
+    <!-- Socket.io and Chart.js -->
+    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Chatbot + Realtime + Analytics Wiring -->
+    <script>
+      // Socket.io client
+      let socket = null;
+      try {
+        socket = io('http://localhost:3000', { transports: ['websocket'] });
+      } catch (e) {
+        console.warn('Socket.io not available yet:', e);
+      }
+
+      // Identify user to server (after Firebase or local state ready)
+      function getUserIdForSocket() {
+        // Prefer Firebase user; fallback to saved email or anonymous
+        const firebaseEmail = window.myAppFirebase?.currentUser?.email;
+        const savedEmail = localStorage.getItem('userEmail');
+        return firebaseEmail || savedEmail || ('anon-' + Math.random().toString(36).slice(2));
+      }
+
+      document.addEventListener('DOMContentLoaded', () => {
+        const isAdmin = localStorage.getItem('isAdmin') === 'true';
+        const openAnalyticsBtn = document.getElementById('openAnalyticsBtn');
+        if (isAdmin) openAnalyticsBtn?.classList.remove('hidden');
+
+        if (socket) {
+          socket.emit('join', { userId: getUserIdForSocket(), isAdmin });
+          socket.on('notification', (payload) => {
+            // Show toast using existing displayMessage if present
+            if (typeof window.displayMessage === 'function') {
+              window.displayMessage(payload.message || 'New notification', 'info');
+            } else {
+              console.log('[notification]', payload);
+            }
+          });
+          socket.on('analyticsUpdate', (data) => {
+            // Live update charts if open
+            if (window.__ordersChart && window.__revenueChart) {
+              try {
+                if (data.orders) {
+                  window.__ordersChart.data.labels = data.orders.labels;
+                  window.__ordersChart.data.datasets[0].data = data.orders.values;
+                  window.__ordersChart.update();
+                }
+                if (data.revenue) {
+                  window.__revenueChart.data.labels = data.revenue.labels;
+                  window.__revenueChart.data.datasets[0].data = data.revenue.values;
+                  window.__revenueChart.update();
+                }
+              } catch (e) { console.warn('analyticsUpdate failed', e); }
+            }
+          });
+        }
+
+        // Chat UI
+        const chatbotToggle = document.getElementById('chatbotToggle');
+        const chatbotPanel = document.getElementById('chatbotPanel');
+        const chatbotClose = document.getElementById('chatbotClose');
+        const chatbotForm = document.getElementById('chatbotForm');
+        const chatbotInput = document.getElementById('chatbotInput');
+        const chatbotMessages = document.getElementById('chatbotMessages');
+        let threadId = localStorage.getItem('chat_thread_id') || (Date.now()+"-"+Math.random().toString(36).slice(2));
+        localStorage.setItem('chat_thread_id', threadId);
+
+        function pushMsg(role, text) {
+          const div = document.createElement('div');
+          div.className = role === 'user' ? 'text-right' : 'text-left';
+          div.innerHTML = `<div class="inline-block px-3 py-2 rounded-lg ${role==='user'?'bg-blue-600 text-white':'bg-white border'}">${text}</div>`;
+          chatbotMessages.appendChild(div);
+          chatbotMessages.scrollTop = chatbotMessages.scrollHeight;
+        }
+
+        chatbotToggle.addEventListener('click', () => chatbotPanel.classList.toggle('hidden'));
+        chatbotClose.addEventListener('click', () => chatbotPanel.classList.add('hidden'));
+        chatbotForm.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          const msg = chatbotInput.value.trim();
+          if (!msg) return;
+          pushMsg('user', msg);
+          chatbotInput.value = '';
+          try {
+            const res = await fetch('http://localhost:3000/chat', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ userId: getUserIdForSocket(), threadId, message: msg })
+            });
+            const data = await res.json();
+            pushMsg('assistant', data.reply || '...');
+          } catch (err) {
+            pushMsg('assistant', 'Server not available yet. Start backend at http://localhost:3000');
+          }
+        });
+
+        // Analytics modal
+        const analyticsModal = document.getElementById('analyticsModal');
+        const analyticsClose = document.getElementById('analyticsClose');
+        openAnalyticsBtn?.addEventListener('click', async () => {
+          analyticsModal.classList.remove('hidden');
+          try {
+            const resp = await fetch('http://localhost:3000/analytics');
+            const data = await resp.json();
+            const ordersCtx = document.getElementById('ordersChart').getContext('2d');
+            const revenueCtx = document.getElementById('revenueChart').getContext('2d');
+            window.__ordersChart = new Chart(ordersCtx, {
+              type: 'line',
+              data: { labels: data.orders.labels, datasets: [{ label: 'Orders', data: data.orders.values, borderColor: '#3B82F6', fill: false }] },
+              options: { responsive: true, maintainAspectRatio: false }
+            });
+            window.__revenueChart = new Chart(revenueCtx, {
+              type: 'bar',
+              data: { labels: data.revenue.labels, datasets: [{ label: 'Revenue', data: data.revenue.values, backgroundColor: '#10B981' }] },
+              options: { responsive: true, maintainAspectRatio: false }
+            });
+          } catch (e) {
+            console.warn('Analytics fetch failed', e);
+          }
+        });
+        analyticsClose?.addEventListener('click', () => analyticsModal.classList.add('hidden'));
+        analyticsModal?.addEventListener('click', (e) => { if (e.target === analyticsModal) analyticsModal.classList.add('hidden'); });
+      });
+    </script>
+  </body>
+</html>
